Asulado te guia update videos

--- a/src/pages/asulado_te_guia/index.html
+++ b/src/pages/asulado_te_guia/index.html
@@ -5,7 +5,7 @@
 >
   <block name="head">
     <title>
-      Preguntas frecuentes | ASULADO Seguros de Vida | ASULADO Seguros de Vida
+      Asulado te guia | ASULADO Seguros de Vida | ASULADO Seguros de Vida
     </title>
     <meta
       name="title"
@@ -69,48 +69,70 @@
             ></i>
             ¡Conoce cómo utilizar nuestros canales de comunicación!
           </h2>
+          <div class="as__que_es_content">
+            <p class="prop_anim pt-10 text-xl">
+              Tenemos diferentes opciones para que te comuniques con nosotros y
+              realices todo tipo de solicitudes que necesites.
+            </p>
+            <p class="text-azul-norm text-xl">
+              <b>¡A continuación te mostramos cómo!</b>
+            </p>
+          </div>
         </div>
       </div>
     </section>
     <section class="as__section bg-alpha-20 pb-20">
       <div class="as__section_wrapper full">
+        <h3 class="as__title_section pt-10 pb-10">Videos destacados</h3>
         <div class="as__section_content_full">
+
+
           <div class="grid grid-cols-1 md:grid-cols-3 grid-auto-rows gap-8">
             <div class="flex flex-col gap-4">
-              <a href="https://www.youtube.com/watch?v=KMv0bezpE4A&list=PLOQZWsm0dD6gjtenXVqc6wA-aGjpm9KKP&index=4" target="_blank">
+              <a
+                href="https://www.youtube.com/watch?v=KMv0bezpE4A&list=PLOQZWsm0dD6gjtenXVqc6wA-aGjpm9KKP&index=4"
+                target="_blank"
+              >
                 <img
                   src="/assets/images/img_guia_1.jpg"
                   alt="Asulado te guia"
                   class="w-full rounded-3xl block"
                 />
               </a>
-              <p class="text-base text-azul-bold">
+              <p class="text-base text-azul-bold text-center text-xl">
                 <b>Lusa</b>, nueva asistente virtual de <b>ASULADO</b>
-               
               </p>
             </div>
             <div class="flex flex-col gap-4">
-              <a href="https://www.youtube.com/watch?v=GJB7MZBPfeQ&list=PLOQZWsm0dD6gjtenXVqc6wA-aGjpm9KKP&index=3" target="_blank">
+              <a
+                href="https://www.youtube.com/watch?v=GJB7MZBPfeQ&list=PLOQZWsm0dD6gjtenXVqc6wA-aGjpm9KKP&index=3"
+                target="_blank"
+              >
                 <img
                   src="/assets/images/img_guia_2.jpg"
                   alt="Asulado te guia"
                   class="w-full rounded-3xl block"
                 />
               </a>
-              <p class="text-base text-azul-bold">
-                ¿Cómo chatear con  <b>Lusa</b>? La asistente virtual de <b>ASULADO</b>? 
+              <p class="text-base text-azul-bold text-center text-xl">
+                ¿Cómo chatear con <b>Lusa</b>? La asistente virtual de
+                <b>ASULADO</b>?
               </p>
             </div>
             <div class="flex flex-col gap-4">
-              <a href="https://www.youtube.com/watch?v=9LyvirRP4F8&list=PLOQZWsm0dD6gjtenXVqc6wA-aGjpm9KKP&index=2" target="_blank">
+              <a
+                href="https://www.youtube.com/watch?v=9LyvirRP4F8&list=PLOQZWsm0dD6gjtenXVqc6wA-aGjpm9KKP&index=2"
+                target="_blank"
+              >
                 <img
                   src="/assets/images/img_guia_3.jpg"
                   alt="Asulado te guia"
                   class="w-full rounded-3xl block"
                 />
               </a>
-              <p class="text-base text-azul-bold">
-                ¿Qué documentos puedo autogestionar con <b>Lusa</b>, la asistente virtual de <b>ASULADO</b>? 
+              <p class="text-base text-azul-bold text-center text-xl">
+                ¿Qué documentos puedo autogestionar con <b>Lusa</b>, la
+                asistente virtual de <b>ASULADO</b>?
               </p>
             </div>
           </div>
@@ -118,7 +140,7 @@
       </div>
     </section>
 
-   <!---<section class="as__section bg-alpha-20 pb-20">
+    <section class="as__section bg-alpha-20 pb-20">
       <div class="as__section_wrapper full">
         <div class="as__section_content_full">
           <div class="flex flex-row gap-10">
@@ -126,18 +148,80 @@
               <ul class="flex flex-col gap-4">
                 <li>
                   <a
-                    href="#"
-                    class="block rounded-lg bg-white py-1 px-3 text-azul-dark"
-                    >Categoría 1</a
+                    href="" target="_blank"
+                    class="flex rounded-lg bg-white py-1 px-3 text-azul-dark text-2xl font-bold pt-5 pb-5 justify-between pl-5 pr-5"
+                    >Canal 
+                    <i class="fa-solid fa-angle-right text-2xl"></i></a
                   >
                 </li>
               </ul>
             </aside>
-            <div class="md:w-9/12">aaa</div>
+            <div class="md:w-9/12 bg-white rounded-lg p-4">
+              <!-- Video Thumb -->
+              <div class="w-full flex gap-4 flex-col md:flex-row rounded-lg border items-center border-alpha-30 p-4 mb-5">
+                <div class="w-full md:w-2/5  rounded-2xl h-full relative">
+
+                  <a href="https://www.youtube.com/watch?v=KMv0bezpE4A&list=PLOQZWsm0dD6gjtenXVqc6wA-aGjpm9KKP&index=5" target="_blank">
+                  <img class="max-w-sm z-10 self-center w-full mx-auto rounded-2xl" src="/assets/images/video_thumb_1.webp" alt=""/>
+                  <svg style="    top: 50%; left: 50%; margin-left: -35px; margin-top: -35px;" class="absolute" width="70" height="70" viewBox="0 0 124 124" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <circle cx="62" cy="62" r="62" fill="#D3EBF1"/>
+                    <path d="M45.498 32.2832L85.4355 56.6895C87.377 57.9375 88.625 60.1562 88.625 62.375C88.625 64.7324 87.377 66.9512 85.4355 68.0605L45.498 92.4668C43.418 93.7148 40.7832 93.8535 38.7031 92.6055C36.623 91.4961 35.375 89.2773 35.375 86.7812V37.9688C35.375 35.6113 36.623 33.3926 38.7031 32.2832C40.7832 31.0352 43.418 31.0352 45.498 32.2832Z" fill="#273E82"/>
+                  </svg>
+                </a>
+                </div>
+                <div class="w-full md:w-3/5 flex flex-col gap-4">
+                  <h4 class="text-xl font-je text-azul-bold"><b>Lusa</b>, nueva asistente virtual de <b>ASULADO</b></h4>
+                  <p>
+                    Lusa es nuestra nueva asistente virtual que se suma a la familia ASULADO. 
+                  </p>
+                </div>
+              </div>
+               <!-- Fin Video Thumb -->
+                <!-- Video Thumb --> 
+              <div class="w-full flex gap-4 flex-col md:flex-row rounded-lg border items-center border-alpha-30 p-4 mb-5">
+                <div class="w-full md:w-2/5  rounded-2xl h-full relative">
+                  <a href="https://www.youtube.com/watch?v=GJB7MZBPfeQ&list=PLOQZWsm0dD6gjtenXVqc6wA-aGjpm9KKP&index=4" target="_blank">
+                  <img class="max-w-sm z-10 self-center w-full mx-auto rounded-2xl" src="/assets/images/video_thumb_2.webp" alt=""/>
+                  <svg style="    top: 50%; left: 50%; margin-left: -35px; margin-top: -35px;" class="absolute" width="70" height="70" viewBox="0 0 124 124" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <circle cx="62" cy="62" r="62" fill="#D3EBF1"/>
+                    <path d="M45.498 32.2832L85.4355 56.6895C87.377 57.9375 88.625 60.1562 88.625 62.375C88.625 64.7324 87.377 66.9512 85.4355 68.0605L45.498 92.4668C43.418 93.7148 40.7832 93.8535 38.7031 92.6055C36.623 91.4961 35.375 89.2773 35.375 86.7812V37.9688C35.375 35.6113 36.623 33.3926 38.7031 32.2832C40.7832 31.0352 43.418 31.0352 45.498 32.2832Z" fill="#273E82"/>
+                  </svg>
+                </a>
+                </div>
+                <div class="w-full md:w-3/5 flex flex-col gap-4">
+                  <h4 class="text-xl font-je text-azul-bold">¿Cómo chatear con <b>Lusa</b>? La asistente virtual de
+                    <b>ASULADO</b>?</h4>
+                  <p>
+                    Ahora gestionar tus solicitudes con nosotros es mucho más fácil y rápido. Lusa, nuestra asistente virtual y tu nueva mejor amiga, llegó para hacerte la vida más sencilla.
+                  </p>
+                </div>
+              </div>
+               <!-- Fin Video Thumb -->
+                <!-- Video Thumb -->
+              <div class="w-full flex gap-4 flex-col md:flex-row rounded-lg border items-center border-alpha-30 p-4">
+                <div class="w-full md:w-2/5  rounded-2xl h-full relative">
+                  <a href="https://www.youtube.com/watch?v=9LyvirRP4F8&list=PLOQZWsm0dD6gjtenXVqc6wA-aGjpm9KKP&index=3" target="_blank">
+                  <img class="max-w-sm z-10 self-center w-full mx-auto rounded-2xl" src="/assets/images/video_thumb_3.webp" alt=""/>
+                  <svg style="    top: 50%; left: 50%; margin-left: -35px; margin-top: -35px;" class="absolute" width="70" height="70" viewBox="0 0 124 124" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <circle cx="62" cy="62" r="62" fill="#D3EBF1"/>
+                    <path d="M45.498 32.2832L85.4355 56.6895C87.377 57.9375 88.625 60.1562 88.625 62.375C88.625 64.7324 87.377 66.9512 85.4355 68.0605L45.498 92.4668C43.418 93.7148 40.7832 93.8535 38.7031 92.6055C36.623 91.4961 35.375 89.2773 35.375 86.7812V37.9688C35.375 35.6113 36.623 33.3926 38.7031 32.2832C40.7832 31.0352 43.418 31.0352 45.498 32.2832Z" fill="#273E82"/>
+                  </svg>
+                    </a>
+                </div>
+                <div class="w-full md:w-3/5 flex flex-col gap-4">
+                  <h4 class="text-xl font-je text-azul-bold"> ¿Qué documentos puedo autogestionar con <b>Lusa</b>, la
+                    asistente virtual de <b>ASULADO</b>?</h4>
+                  <p>
+                    ¿Eres pensionado de ASULADO y necesitas solicitar la colilla de pago, certificado de pensión o la copia de tu póliza?
+                  </p>
+                </div>
+              </div>
+               <!-- Fin Video Thumb -->
+            </div>
           </div>
         </div>
       </div>
-    </section>-->
+    </section>
   </block>
   <!-- FIN CONTENIDO DEL HOME -->
 </extends>
