--- a/src/pages/PORTAL/error_303.html
+++ b/src/pages/PORTAL/error_303.html
@@ -37,14 +37,13 @@
             src="/assets/images/logo_asulado.svg"
             alt="logo_asulado"
           />
-          <h4 class="anim_1">
-            Parece que no tienes autorización para
-            <a href="#" class="btn"> ingresar aquí</a>
-          </h4>
           <h3 class="anim_1">
+            Parece que no tienes autorización para ingresar a esta página
+          </h3>
+          <h4 class="anim_1">
             Si necesitas ayuda puedes ponerte en contacto. ¡Estamos aquí para
             ayudarte!
-          </h3>
+          </h4>
           <img
             class="anim_1"
             src="/assets/images/PORTAL/error_303.png"
