--- a/src/pages/PORTAL/error_404.html
+++ b/src/pages/PORTAL/error_404.html
@@ -37,10 +37,10 @@
             src="/assets/images/logo_asulado.svg"
             alt="logo_asulado"
           />
-          <h4 class="anim_1">¡Parece que esta página no existe!</h4>
-          <h3 class="anim_1">
-            Te invitamos a explorar otras acciones de nuestro sitio web.
-          </h3>
+          <h3 class="anim_1">¡Parece que esta página no existe!</h3>
+          <h4 class="anim_1">
+            Te invitamos a explorar otras secciones de nuestro sitio web.
+          </h4>
           <img
             class="anim_1"
             src="/assets/images/PORTAL/error_404.png"
