--- a/src/pages/PORTAL/sesion.html
+++ b/src/pages/PORTAL/sesion.html
@@ -46,20 +46,24 @@
       MODAL DE SESION
      -->
 
-    <dialog class="modal modal-bottom sm:modal-middle modal_sesion" open>
+    <dialog
+      id="timer_session"
+      class="modal modal-bottom sm:modal-middle modal_sesion"
+      open
+    >
       <div class="modal-box">
         <div class="modal_info">
           <i class="ico-warn fa-duotone fa-triangle-exclamation"></i>
-          <h3>Hemos cerrado tu sesión.</h3>
+          <h3>Hemos cerrado tu sesión</h3>
           <p class="py-4">
-            Llevas 10 minutos de inactividad. Por temas de seguridad, hemos
-            cerrado tu sesión automáticamente.
+            Llevas 10 minutos de inactividad. Por seguridad, hemos cerrado tu
+            sesión automáticamente.
           </p>
         </div>
         <div class="modal-action">
           <form method="dialog">
             <p>Haz clic en “aceptar” para iniciar sesión de nuevo.</p>
-            <button href="#" class="as__button small">
+            <button id="close_timer_session" class="as__button small">
               <span>Aceptar</span>
               <i role="presentation" class="fa-light fa-arrow-right"></i>
             </button>
@@ -75,16 +79,15 @@
         <div class="alert-int">
           <h4>¿Sigues ahí?</h4>
           <p class="s_info">
-            ¡Llevas 10 minutos de inactividad! Por temas de seguridad,
-            cerraremos tu sesión automáticamente si en los próximos 2 minutos no
-            muestras actividad nuevamente.
+            ¡Llevas 5 minutos de inactividad! Por temas de seguridad, en los
+            próximos 5 minutos tu sesión se cerrará si no realizas ninguna
+            actividad.
           </p>
           <div class="alert-action">
             <p class="s_info2">
-              Haz clic en cualquier lugar de la pantalla para mostrarnos que
-              sigues ahí.
+              Haz clic en acepatr para mostrarnos que sigues ahí.
             </p>
-            <button id="close_session">Aceptar</button>
+            <button id="close_toast_session">Aceptar</button>
           </div>
         </div>
       </div>
