--- a/src/pages/PORTAL/sesion.html
+++ b/src/pages/PORTAL/sesion.html
@@ -85,7 +85,7 @@
           </p>
           <div class="alert-action">
             <p class="s_info2">
-              Haz clic en acepatr para mostrarnos que sigues ahí.
+              Haz clic en aceptar para mostrarnos que sigues ahí.
             </p>
             <button id="close_toast_session">Aceptar</button>
           </div>
