--- a/src/pages/PORTAL/4_novedades_1_2.html
+++ b/src/pages/PORTAL/4_novedades_1_2.html
@@ -187,8 +187,8 @@
               </p>
             </div>
           </div>
-          <div class="pa_co_content">
-            [***** !!!!!!!! COD DE SALESFORCE *****]
+          <div class="pa_co_form formpp">
+            <include src="PORTAL/4_novedades/4_1_2.html"></include>
           </div>
           <div class="pa_co_footer prose"></div>
         </div>
