--- a/src/pages/PORTAL/4_novedades_1_3.html
+++ b/src/pages/PORTAL/4_novedades_1_3.html
@@ -159,7 +159,7 @@
       <div class="as__section_wrapper">
         <div class="as__section_content_full pa__inter_content">
           <div class="pa_co_header">
-            <h3> Novedades de Caja de Compensación:</h3>
+            <h3>Novedades de Caja de Compensación:</h3>
             <p class="text-lg">
               Selecciona tu Caja de Compensación. Diligencia los datos
               requeridos y adjunta el certificado indicado. Ten en cuenta que tú
@@ -187,8 +187,8 @@
               </p>
             </div>
           </div>
-          <div class="pa_co_content">
-            [***** !!!!!!!! COD DE SALESFORCE *****]
+          <div class="pa_co_form formpp">
+            <include src="PORTAL/4_novedades/4_1_3.html"></include>
           </div>
           <div class="pa_co_footer prose"></div>
         </div>
