--- a/src/pages/asulado_te_guia/index.html
+++ b/src/pages/asulado_te_guia/index.html
@@ -5,11 +5,11 @@
 >
   <block name="head">
     <title>
-      Asulado te guia | ASULADO Seguros de Vida | ASULADO Seguros de Vida
+      Asulado te guia | ASULADO Seguros de Vida 
     </title>
     <meta
       name="title"
-      content="Preguntas frecuentes | ASULADO Seguros de Vida | ASULADO Seguros de Vida"
+      content="Asulado te guia | ASULADO Seguros de Vida "
     />
     <meta
       name="keywords"
@@ -21,29 +21,28 @@
     />
     <meta
       name="description"
-      content="¿Cuánto recibes de renta vitalicia?,
-      ¿cómo ser beneficiario de una pensión por sobrevivencia? Explora algunas preguntas frecuentes aquí"
+      content="Asulado te guia | ASULADO Seguros de Vida "
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.asulado.com/" />
     <meta
       property="og:title"
-      content="Preguntas frecuentes | ASULADO Seguros de Vida | ASULADO Seguros de Vida"
+      content="Asulado te guia | ASULADO Seguros de Vida "
     />
     <meta
       property="og:description"
-      content="¿Cuánto recibes de renta vitalicia?, ¿cómo ser beneficiario de una pensión por sobrevivencia? Explora algunas preguntas frecuentes aquí"
+      content="Asulado te guia | ASULADO Seguros de Vida "
     />
     <meta property="og:image" content="/assets/fb.png" />
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://www.asulado.com/" />
     <meta
       property="twitter:title"
-      content="Preguntas frecuentes | ASULADO Seguros de Vida | ASULADO Seguros de Vida"
+      content="Asulado te guia | ASULADO Seguros de Vida "
     />
     <meta
       property="twitter:description"
-      content="¿Cuánto recibes de renta vitalicia?, ¿cómo ser beneficiario de una pensión por sobrevivencia? Explora algunas preguntas frecuentes aquí"
+      content="Asulado te guia | ASULADO Seguros de Vida "
     />
     <meta property="twitter:image" content="/assets/fb.png" />
   </block>
@@ -53,7 +52,7 @@
       src="top.html"
       locals='{ 
       "bg": "bg-BG-3",
-      "image": "top_preguntas_frecuentes.webp",
+      "image": "top_asulado_guia.webp",
       "t1start":"1",
       "t2start":"3",
       "title1": "Asulado",
