Update page titles and image paths in HTML files

--- a/src/pages/gobierno_corporativo/index.html
+++ b/src/pages/gobierno_corporativo/index.html
@@ -40,7 +40,14 @@
   <block name="content">
     <include
       src="top.html"
-      locals='{ "bg": "bg-BG-8", "image": "top_gobierno.webp", "t1start":"1", "t2start":"3", "title1": "Gobierno", "title2": "corporativo" }'
+      locals='{ 
+      "bg": "bg-BG-8"
+      "image": "top_gobierno.webp"
+      "t1start":"0"
+      "t2start":"0"
+      "title1": "Gobierno"
+      "title2": "corporativo"
+    }'
     ></include>
     <section class="as__section as__g_solicitudes plain">
       <div class="as__section_wrapper full">
@@ -114,12 +121,12 @@
           }'
             ></include>
             <include
-            src="gobierno/6_informacion_accionistas.html"
-            locals='{
+              src="gobierno/6_informacion_accionistas.html"
+              locals='{
           "cls": "",
           "data": "5"
         }'
-          ></include>
+            ></include>
           </div>
         </div>
       </div>
