--- a/src/pages/asulado_te_guia/index.html
+++ b/src/pages/asulado_te_guia/index.html
@@ -53,8 +53,8 @@
       locals='{ 
       "bg": "bg-BG-3",
       "image": "top_asulado_guia.webp",
-      "t1start":"1",
-      "t2start":"3",
+      "t1start":"2",
+      "t2start":0",
       "title1": "Asulado",
       "title2": "te guía" }'
     ></include>
