Update form layout and include new HTML file for form in 4_novedades_1_4.html

--- a/src/pages/asulado_te_guia/index.html
+++ b/src/pages/asulado_te_guia/index.html
@@ -4,13 +4,8 @@
 "top": "init" }'
 >
   <block name="head">
-    <title>
-      Asulado te guia | ASULADO Seguros de Vida 
-    </title>
-    <meta
-      name="title"
-      content="Asulado te guia | ASULADO Seguros de Vida "
-    />
+    <title>Asulado te guia | ASULADO Seguros de Vida</title>
+    <meta name="title" content="Asulado te guia | ASULADO Seguros de Vida " />
     <meta
       name="keywords"
       content="Qué es asulado,
