Update gobierno_corporativo/index.html with new background image and title

--- a/src/pages/gobierno_corporativo/index.html
+++ b/src/pages/gobierno_corporativo/index.html
@@ -41,11 +41,11 @@
     <include
       src="top.html"
       locals='{ 
-      "bg": "bg-BG-8"
-      "image": "top_gobierno.webp"
-      "t1start":"0"
-      "t2start":"0"
-      "title1": "Gobierno"
+      "bg": "bg-BG-8",
+      "image": "top_gobierno.webp",
+      "t1start":"0",
+      "t2start":"0",
+      "title1": "Gobierno",
       "title2": "corporativo"
     }'
     ></include>
