Update form layout and include new HTML file for form in 4_novedades_1_4.html

--- a/src/pages/PORTAL/4_novedades_1_1.html
+++ b/src/pages/PORTAL/4_novedades_1_1.html
@@ -53,6 +53,11 @@
             >
             <a role="tab" class="tab" data-tab="1">Certificación nomina</a>
             <a role="tab" class="tab" data-tab="2">Consultar novedades</a>
+            <span id="pg:j_id7">
+              <a class="tab" data-tab="3" role="tab"
+                >Distribución de mesada</a
+              ></span
+            >
           </div>
           <div id="tabs_nov_int" class="py-2">
             <ul data-tab="0" class="tab-active">
@@ -145,6 +150,19 @@
                   "link":"/PORTAL/4_novedades_3_1.html",
                   "ico": "file-lines",
                   "title":"Consulta novedades",
+                  "image":"tmp_servicio.png",
+                  "content":"¡Tu tranquilidad es nuestra prioridad! Conoce las actualizaciones de tus novedades de nómina aquí.."
+                }'
+              ></include>
+            </ul>
+            <ul data-tab="3">
+              <include
+                src="PORTAL/p_link_servicio.html"
+                locals='{ 
+                  "cls":"",
+                  "link":"/PORTAL/4_novedades_3_1.html",
+                  "ico": "file-lines",
+                  "title":"Distribución de mesada",
                   "image":"tmp_servicio.png",
                   "content":"¡Tu tranquilidad es nuestra prioridad! Conoce las actualizaciones de tus novedades de nómina aquí.."
                 }'
