--- a/src/pages/gobierno_corporativo/index.html
+++ b/src/pages/gobierno_corporativo/index.html
@@ -42,7 +42,7 @@
       src="top.html"
       locals='{ 
       "bg": "bg-BG-8",
-      "image": "top_GC.webp",
+      "image": "gobierno_corporativo_top.webp",
       "t1start":"0",
       "t2start":"0",
       "title1": "Gobierno",
