Update form layout and include new HTML file for form in 4_novedades_1_4.html

--- a/src/pages/PORTAL/4_novedades_1_4.html
+++ b/src/pages/PORTAL/4_novedades_1_4.html
@@ -161,9 +161,10 @@
           <div class="pa_co_header">
             <h3>Novedades Pensión Voluntaria:</h3>
             <p class="text-lg">
-              Selecciona tu entidad de Pensión Voluntaria. Diligencia los datos
-              requeridos y adjunta el certificado indicado. Ten en cuenta que tú
-              elegirás el valor de tu aporte.
+              A continuación, selecciona tu entidad de Pensión Voluntaria e
+              indica los meses de ahorro extraordinario que corresponden a tu
+              Novedad. Ten en cuenta que tú seleccionarás el valor de tu aporte.
+              Indica si deseas realizar una actualización o un retiro.
             </p>
             <div role="alert" class="alert">
               <svg
