--- a/src/pages/PORTAL/4_novedades_1_2.html
+++ b/src/pages/PORTAL/4_novedades_1_2.html
@@ -161,9 +161,9 @@
           <div class="pa_co_header">
             <h3>Novedades de EPS:</h3>
             <p class="text-lg">
-              A continuación, elige tu EPS y haz click en “nueva deducción”.
-              Diligencia los datos requeridos y adjunta el certificado indicado.
-              Ten en cuenta que tu aporte se calculará automáticamente.
+              A continuación, elige el nombre de tu EPS. Tu porcentaje de
+              cotización y el valor de tu aporte se calcularán automáticamente.
+              Indica si deseas realizar un traslado o un retiro.
             </p>
             <div role="alert" class="alert">
               <svg
