Update error_303.html error message for better user understanding

--- a/src/pages/PORTAL/error_303.html
+++ b/src/pages/PORTAL/error_303.html
@@ -41,8 +41,8 @@
             Parece que no tienes autorización para ingresar a esta página
           </h3>
           <h4 class="anim_1">
-            Si necesitas ayuda puedes ponerte en contacto. ¡Estamos aquí para
-            ayudarte!
+            Si necesitas ayuda puedes ponerte en contacto por: Si necesitas
+            ayuda, contáctate con nosotros.
           </h4>
           <img
             class="anim_1"
