Update tab 2 in ciberseguridad page and fix filename in mix-manifest.json

--- a/src/pages/ciberseguridad/index.html
+++ b/src/pages/ciberseguridad/index.html
@@ -67,7 +67,7 @@
             <a role="tab" class="tab" data-tab="2" href="#recomendaciones"
               >Recomendaciones para los canales Asulado
             </a>
-            <a role="tab" class="tab">Gestión de riesgos</a>
+            <!-- <a role="tab" class="tab">Gestión de riesgos</a> -->
           </div>
         </div>
       </div>
