--- a/src/pages/ciberseguridad/index.html
+++ b/src/pages/ciberseguridad/index.html
@@ -3,7 +3,7 @@
   locals='{ "id": "as__nuestra_empresa", "top": "init" }'
 >
   <block name="head">
-    <title>Sobre nosotros |ASULADO Seguros de Vida</title>
+    <title>Ciberseguridad |ASULADO Seguros de Vida</title>
     <meta name="title" content="Sobre nosotros | ASULADO Seguros de Vida" />
     <meta
       name="keywords"
