Update form class in HTML files

--- a/src/pages/PORTAL/4_novedades_2_2.html
+++ b/src/pages/PORTAL/4_novedades_2_2.html
@@ -169,7 +169,7 @@
               formato PDF.
             </p>
           </div>
-          <div class="pa_co_form">
+          <div class="pa_co_form formpp">
             <include src="PORTAL/4_novedades/4_2_2.html"></include>
           </div>
           <div class="pa_co_footer prose"></div>
