--- a/src/pages/PORTAL/4_novedades_2_1.html
+++ b/src/pages/PORTAL/4_novedades_2_1.html
@@ -160,13 +160,17 @@
         <div class="as__section_content_full pa__inter_content">
           <div class="pa_co_header">
             <h3>Certificado de estudio:</h3>
+            <p class="text-lg"></p>
             <p class="text-lg">
-              Adjunta a continuación tu certificado de estudio. Te recomendamos
-              nombrar el documento según su contenido, sin caracteres especiales
-              ni nombres muy largos. Procura que sea en formato PDF.
+              Adjunta a continuación tu certificado de estudio.
+            </p>
+            <p class="text-lg">
+              Te recomendamos nombrar el documento según su contenido, sin
+              caracteres especiales ni nombres muy largos. Procura que sea en
+              formato PDF.
             </p>
           </div>
-          <div class="pa_co_form">
+          <div class="pa_co_form formpp">
             <include src="PORTAL/4_novedades/4_2_1.html"></include>
           </div>
           <div class="pa_co_footer prose"></div>
