Update account financial changes wording
Update the wording in the account financial changes section to clarify that users need to confirm the changes instead of updating their financial account data.

--- a/src/pages/PORTAL/4_novedades_2_2.html
+++ b/src/pages/PORTAL/4_novedades_2_2.html
@@ -161,7 +161,8 @@
           <div class="pa_co_header">
             <h3>Certificado de supervivencia:</h3>
             <p class="text-lg">
-              Adjunta a continuación tu certificado de supervivencia.
+              A continuación, adjunta tu certificado de supervivencia e indica
+              la fecha en que este fue expedido.
             </p>
             <p class="text-lg">
               Te recomendamos nombrar el documento según su contenido, sin
