--- a/src/pages/PORTAL/4_novedades_2_3.html
+++ b/src/pages/PORTAL/4_novedades_2_3.html
@@ -161,8 +161,8 @@
           <div class="pa_co_header">
             <h3>Novedades de cuenta financiera:</h3>
             <p class="text-lg">
-              Diligencia los datos a continuación para actualizar los datos de
-              tu cuenta financiera
+              Diligencia los datos a continuación para confirmar las novedades
+              de tu cuenta financiera.
             </p>
           </div>
           <div class="pa_co_form formpp">
