--- a/src/pages/PORTAL/4_novedades_1_3.html
+++ b/src/pages/PORTAL/4_novedades_1_3.html
@@ -161,9 +161,9 @@
           <div class="pa_co_header">
             <h3>Novedades de Caja de Compensación:</h3>
             <p class="text-lg">
-              Selecciona tu Caja de Compensación. Diligencia los datos
-              requeridos y adjunta el certificado indicado. Ten en cuenta que tú
-              elegirás el valor de tu aporte.
+              A continuación, selecciona tu Caja de Compensación. Ten en cuenta
+              que tú seleccionarás el valor de tu aporte. Indica si deseas
+              realizar una actualización, un traslado o un retiro.
             </p>
             <div role="alert" class="alert">
               <svg
