--- a/src/pages/PORTAL/4_novedades_2_1.html
+++ b/src/pages/PORTAL/4_novedades_2_1.html
@@ -162,8 +162,10 @@
             <h3>Certificado de estudio:</h3>
             <p class="text-lg"></p>
             <p class="text-lg">
-              Adjunta a continuación tu certificado de estudio.
+              A continuación, adjunta tu certificado de estudio e indica la
+              fecha en que este fue expedido.
             </p>
+            
             <p class="text-lg">
               Te recomendamos nombrar el documento según su contenido, sin
               caracteres especiales ni nombres muy largos. Procura que sea en
