Update account financial changes wording

--- a/src/pages/PORTAL/4_novedades_1_1.html
+++ b/src/pages/PORTAL/4_novedades_1_1.html
@@ -160,11 +160,11 @@
                 src="PORTAL/p_link_servicio.html"
                 locals='{ 
                   "cls":"",
-                  "link":"/PORTAL/4_novedades_3_1.html",
+                  "link":"/PORTAL/4_novedades_4_1.html",
                   "ico": "file-lines",
                   "title":"Distribución de mesada",
                   "image":"tmp_servicio.png",
-                  "content":"¡Tu tranquilidad es nuestra prioridad! Conoce las actualizaciones de tus novedades de nómina aquí.."
+                  "content":"Si recientemente has tenido cambios en la distribución de tu mesada, como ajustes en los montos o beneficiarios, ¡cuéntanos! Esto nos ayuda a que tus beneficios se administren de la mejor forma."
                 }'
               ></include>
             </ul>
