--- a/src/pages/PORTAL/4_novedades_2_2.html
+++ b/src/pages/PORTAL/4_novedades_2_2.html
@@ -53,6 +53,11 @@
               >Certificación nomina</a
             >
             <a role="tab" class="tab" data-tab="2">Consultar novedades</a>
+            <span id="pg:j_id7">
+              <a class="tab" data-tab="3" role="tab"
+                >Distribución de mesada</a
+              ></span
+            >
           </div>
           <div id="tabs_nov_int" class="py-2">
             <ul data-tab="0">
@@ -147,6 +152,19 @@
                   "title":"Consulta novedades",
                   "image":"tmp_servicio.png",
                   "content":"¡Tu tranquilidad es nuestra prioridad! Conoce las actualizaciones de tus novedades de nómina aquí.."
+                }'
+              ></include>
+            </ul>
+            <ul data-tab="3">
+              <include
+                src="PORTAL/p_link_servicio.html"
+                locals='{ 
+                  "cls":"",
+                  "link":"/PORTAL/4_novedades_4_1.html",
+                  "ico": "file-lines",
+                  "title":"Distribución de mesada",
+                  "image":"tmp_servicio.png",
+                  "content":"Si recientemente has tenido cambios en la distribución de tu mesada, como ajustes en los montos o beneficiarios, ¡cuéntanos! Esto nos ayuda a que tus beneficios se administren de la mejor forma."
                 }'
               ></include>
             </ul>
