--- a/src/pages/error_500.html
+++ b/src/pages/error_500.html
@@ -1,5 +1,5 @@
 <extends
-  src="layout.html"
+  src="layout_clean.html"
   locals='{ "id": "as__gestion_documentos", "top": "init" }'
 >
   <block name="head">
