chore: Update CSS styles for form layout and table formatting

--- a/src/pages/PORTAL/loading.html
+++ b/src/pages/PORTAL/loading.html
@@ -31,7 +31,11 @@
   <block name="content">
     <div class="pa-loading-info">
       <div class="loading"></div>
-      <p>Espera un momento mientras cargamos la información que solicitaste</p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec velit
+        diam, pellentesque rutrum posuere ut, tempus sed lorem. Aliquam erat
+        volutpat.
+      </p>
     </div>
   </block>
   <!-- FIN CONTENIDO DEL HOME -->
