Update loading page styles and add loading info component

--- a/src/pages/PORTAL/loading.html
+++ b/src/pages/PORTAL/loading.html
@@ -31,11 +31,7 @@
   <block name="content">
     <div class="pa-loading-info">
       <div class="loading"></div>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec velit
-        diam, pellentesque rutrum posuere ut, tempus sed lorem. Aliquam erat
-        volutpat.
-      </p>
+      <p>Danos un momento mientras validamos tu información.</p>
     </div>
   </block>
   <!-- FIN CONTENIDO DEL HOME -->
