--- a/src/pages/error_mantenimiento.html
+++ b/src/pages/error_mantenimiento.html
@@ -39,7 +39,7 @@
             <div class="pa_login_screen">
               <div class="error"><img class="anim_1 logo" src="/assets/images/logo_asulado.svg" alt="logo_asulado">
                 <h3 class="anim_1">¡Estamos creando mejores experiencias para ti!</h3>
-                <h4 class="anim_1"> Nuestro sitio web se encuentra en mantenimiento. Te esperamos nuevamente en un rato. </h4><img class="anim_1" src="/assets/images/PORTAL/error_mantenimiento.png" alt="">
+                <h4 class="anim_1"> Nuestro sitio web se encuentra en mantenimiento. Te esperamos en un rato. </h4><img class="anim_1" src="/assets/images/PORTAL/error_mantenimiento.png" alt="">
               </div>
             </div>
           </div>
