--- a/src/pages/error_saturado.html
+++ b/src/pages/error_saturado.html
@@ -38,7 +38,7 @@
         <div class="pa_login pa_mant">
             <div class="pa_login_screen">
               <div class="error"><img class="anim_1 logo" src="/assets/images/logo_asulado.svg" alt="logo_asulado">
-                <h3 class="anim_1"> ¡Hay muchas personas intentando acceder a nuestra sitio web! </h3>
+                <h3 class="anim_1"> ¡Hay muchas personas intentando acceder a nuestro sitio web! </h3>
                 <p class="text-try anim_1">Intenta de nuevo más tarde</p>
                 <h4 class="anim_1">¡Gracias por tu comprensión!</h4><img class="anim_1" src="/assets/images/PORTAL/error_saturado.png" alt="">
               </div>
