--- a/src/pages/asulado_te_guia/index.html
+++ b/src/pages/asulado_te_guia/index.html
@@ -61,14 +61,14 @@
             <i
               class="fa-sharp fa-solid fa-circle-info text-azul-bright2 text-4xl"
             ></i>
-            ¡Conoce a LUSA, nuestra asistente virtual!
+            ¿Ya conoce a Lusa, nuestra asistente virtual?
           </h2>
           <div class="as__que_es_content">
             <p class="prop_anim pt-10 text-xl">
-              LUSA estará disponible para ti las 24 horas del día, y podrá ayudarte con la solicitud de documentos como tu colilla de pago, tu certificado de pensión, la copia de tu póliza o tu Certificado de Ingresos y Retenciones. 
+              Te ensañamos a interactuar con ella a través de nuestros canales digitales de atención. Contáctala y autogestiona tus: Colilla de Pago, Certificado de Pensión, Copia de tu Póliza o el Certificado de Ingresos y Retenciones.
             </p>
             <p class="text-azul-norm text-xl">
-              <b> ¡Descubre aquí más información sobre cómo comunicarte con ella!</b>
+              <b> Ahora, Lusa se convertirá en tu mejor amiga de ASULADO y estará disponible para ti las 24 horas del día.</b>
             </p>
           </div>
         </div>
