Refactor CSS styles for search results table and make it responsive

--- a/src/pages/PORTAL/busqueda.html
+++ b/src/pages/PORTAL/busqueda.html
@@ -37,7 +37,7 @@
     <div id="content" class="as__section pa__inter">
       <div class="as__section_wrapper">
         <div class="as__section_content_full pa__inter_content">
-          <div class="seacrh_result">
+          <div class="search_result">
             <form
               id="header:fm"
               name="header:fm"
