Refactor CSS styles for search results table and make it responsive

--- a/src/pages/PORTAL/3_actualizacion_documentos.html
+++ b/src/pages/PORTAL/3_actualizacion_documentos.html
@@ -74,14 +74,17 @@
     <div id="content" class="as__section pa__inter">
       <div class="as__section_wrapper">
         <div class="as__section_content_full pa__inter_content">
-          <div class="pa_co_header"></div>
-          <div class="pa_co_content">
+          <div class="pa_co_header">
+            <h3>Actualización de documento de identidad</h3>
+            <p>
+              Si cumpliste 18 años y pasaste de tarjeta de identidad a cédula de
+              ciudadanía, actualiza tu documento haciendo clic en "modificar" y
+              luego adjunta una copia de tu cédula.
+            </p>
+          </div>
+          <div class="pa_co_form formpp">
             <include src="PORTAL/3_actualizacion/1_documento.html"></include>
           </div>
-          <div class="pa_co_footer prose"></div>
-        </div>
-        <div class="as__section_content_full">
-          <div class="pa__inter_footer prose"></div>
         </div>
       </div>
     </div>
