--- a/src/pages/PORTAL/4_novedades_1_1.html
+++ b/src/pages/PORTAL/4_novedades_1_1.html
@@ -178,15 +178,22 @@
         <div class="as__section_content_full pa__inter_content">
           <div class="pa_co_header">
             <h3>Redistribuciones de mesada:</h3>
-            <p>
-              Adjunta a continuación tu formato de redistribución de mesada,
-              puedes encontrarlo en el siguiente enlace.
+            <p class="text-lg"></p>
+            <p class="text-lg">
+              Descarga el formato de redistribución de mesada
+              <a
+                href="https://dw2fbj22ajabu.cloudfront.net/assets/documentos/FORMATO%20REDISTRIBUCION%20DE%20MESADAS%20V4.pdf"
+                style="text-decoration: underline"
+                target="_blank"
+                >aquí</a
+              >, diligéncialo y adjúntalo a continuación.
             </p>
-            <p>
+            <p class="text-lg">
               Te recomendamos nombrar el documento según su contenido, sin
               caracteres especiales ni nombres muy largos. Procura que sea en
               formato PDF.
             </p>
+            <p></p>
           </div>
           <div class="pa_co_content formpp">
             <include src="PORTAL/4_novedades/4_1_1.html"></include>
