--- a/src/pages/asulado_te_guia/index.html
+++ b/src/pages/asulado_te_guia/index.html
@@ -47,8 +47,8 @@
       src="top.html"
       locals='{ 
       "bg": "bg-BG-3",
-      "image": "top_asulado_guia.webp",
-      "t1start":"2",
+      "image": "top_interna_guia.webp",
+      "t1start":"0",
       "t2start":"0",
       "title1": "Asulado",
       "title2": "te guía" }'
