--- a/src/pages/asulado_te_guia/index.html
+++ b/src/pages/asulado_te_guia/index.html
@@ -47,7 +47,7 @@
       src="top.html"
       locals='{ 
       "bg": "bg-BG-3",
-      "image": "top_interna_guia.webp",
+      "image": "top_interna_guia_img.webp",
       "t1start":"0",
       "t2start":"0",
       "title1": "Asulado",
