--- a/src/pages/asulado_te_guia/index.html
+++ b/src/pages/asulado_te_guia/index.html
@@ -61,7 +61,7 @@
             <i
               class="fa-sharp fa-solid fa-circle-info text-azul-bright2 text-4xl"
             ></i>
-            ¿Ya conoce a Lusa, nuestra asistente virtual??
+            ¿Ya conoce a Lusa, nuestra asistente virtual?
           </h2>
           <div class="as__que_es_content">
             <p class="prop_anim pt-10 text-xl">
