Update image paths in home article and article pages

--- a/src/pages/PORTAL/articulo_1.html
+++ b/src/pages/PORTAL/articulo_1.html
@@ -36,15 +36,11 @@
 
     <div id="content" class="as__section pa__inter">
       <div class="as__section_wrapper">
-        <div class="as__section_content_full pa__inter_content">
+        <div class="as__section_content_full pa__inter_content news_cont">
           <div class="news">
             <h1>
               ¿Cómo ahorrar al mercar? Tips para aprovechar tu mesada pensional
             </h1>
-            <img
-              src="/assets/images/blog/a3.jpg"
-              alt="¿Cómo ahorrar al mercar? Tips para aprovechar tu mesada pensional"
-            />
 
             <p>
               Cuando encuentras estrategias para ahorrar al mercar consigues
@@ -62,6 +58,10 @@
               presentamos algunos tips para mercar inteligente y aprovechar
               mejor tu presupuesto.
             </p>
+            <img
+              src="/assets/images/blog/p_1_3.webp"
+              alt="¿Cómo ahorrar al mercar? Tips para aprovechar tu mesada pensional"
+            />
 
             <h3>1. Planifica tus compras</h3>
             <p>
@@ -125,7 +125,7 @@
               cantidad de tus alimentos.
             </p>
             <img
-              src="/assets/images/blog/a2.jpg"
+              src="/assets/images/blog/p_1_2.webp"
               alt="¿Cómo ahorrar al mercar? Tips para aprovechar tu mesada pensional"
             />
             <h2>Ahorrar al mercar sí es posible</h2>
@@ -140,7 +140,7 @@
             </p>
             <p>¡Sigamos aprendiendo juntos!</p>
             <img
-              src="/assets/images/blog/a4.jpg"
+              src="/assets/images/blog/p_1_4.webp"
               alt="¿Cómo ahorrar al mercar? Tips para aprovechar tu mesada pensional"
             />
             <h3>Fuentes:</h3>
@@ -164,6 +164,7 @@
               </li>
             </ul>
           </div>
+          <include src="PORTAL/p_news_aside.html"></include>
         </div>
       </div>
     </div>
