--- a/src/pages/PORTAL/articulo_2.html
+++ b/src/pages/PORTAL/articulo_2.html
@@ -36,17 +36,12 @@
 
     <div id="content" class="as__section pa__inter">
       <div class="as__section_wrapper">
-        <div class="as__section_content_full pa__inter_content">
+        <div class="as__section_content_full pa__inter_content news_cont">
           <div class="news">
             <h1>
               ¡Evita caer en estafas financieras! Sigue estos consejos y cuida
               tu dinero.
             </h1>
-
-            <img
-              src="/assets/images/blog/a3.jpg"
-              alt="¿Cómo ahorrar al mercar? Tips para aprovechar tu mesada pensional"
-            />
 
             <p>
               Hoy en día, las estafas financieras se han vuelto muy comunes y
@@ -59,7 +54,10 @@
               protegerte.
             </p>
 
-            <p>[Image placeholder: Evitar estafas en internet]</p>
+            <img
+              src="/assets/images/blog/p_2_2.webp"
+              alt=" Evitar estafas en internet"
+            />
 
             <h2>¿Cómo funcionan las estafas financieras?</h2>
 
@@ -95,7 +93,11 @@
               </li>
             </ul>
 
-            <p>[Image placeholder: Desconfiar de mensajes sospechosos]</p>
+            <img
+              src="/assets/images/blog/p_2_3.webp"
+              alt=" ¡Evita caer en estafas financieras! Sigue estos consejos y cuida
+            tu dinero."
+            />
 
             <h2>Consejos para evitar caer en estafas financieras</h2>
 
@@ -214,6 +216,7 @@
               </li>
             </ul>
           </div>
+          <include src="PORTAL/p_news_aside.html"></include>
         </div>
       </div>
     </div>
