--- a/src/pages/PORTAL/index.html
+++ b/src/pages/PORTAL/index.html
@@ -328,23 +328,26 @@
           <ul class="servicios_articulos_item">
             <include
               src="PORTAL/p_home_articulo.html"
-              locals='{ "title":"5 consejos para aprovechar el seguro previsional",
-              "image":"tmp_articulo.jpg",
-              "content":"Laboris in officia irure duis irure aliqua do magna aliqua consectetur. Adipisicing occaecat qui ut voluptate ut Lorem in culpa est."
+              locals='{ "title":" ¿Cómo ahorrar al mercar? Tips para aprovechar tu mesada pensional ",
+              "image":"blog/p_1_1.webp",
+              "num": 1,
+              "content":" Cuando encuentras estrategias para ahorrar al mercar consigues disminuir tus gastos, mejorar tu calidad de vida y tener un dinero extra para otros objetivos, como un gustico o un ahorro para emergencias. "
             }'
             ></include>
             <include
               src="PORTAL/p_home_articulo.html"
               locals='{ "title":"5 consejos para aprovechar el seguro previsional",
-              "image":"tmp_articulo.jpg",
+              "image":"blog/p_2_1.webp",
+              "num": 2,
               "content":"Laboris in officia irure duis irure aliqua do magna aliqua consectetur. Adipisicing occaecat qui ut voluptate ut Lorem in culpa est."
             }'
             ></include>
             <include
               src="PORTAL/p_home_articulo.html"
-              locals='{ "title":"5 consejos para aprovechar el seguro previsional",
-              "image":"tmp_articulo.jpg",
-              "content":"Laboris in officia irure duis irure aliqua do magna aliqua consectetur. Adipisicing occaecat qui ut voluptate ut Lorem in culpa est."
+              locals='{ "title":" Tips para calcular tus gastos mensuales: crea presupuestos para manejar mejor tu dinero.",
+              "image":"blog/p_3_1.webp",
+              "num": 3,
+              "content":"Llevar un control de tus finanzas personales es fundamental para aumentar tu bienestar financiero."
             }'
             ></include>
           </ul>
