--- a/src/pages/PORTAL/pqrs_1_crear.html
+++ b/src/pages/PORTAL/pqrs_1_crear.html
@@ -108,28 +108,8 @@
             </ul>
             <p>
               Una vez hayas identificado el tipo de solicitud que quieres
-              realizar, selecciona entre las opciones a continuación. Indica el
-              tema y detalle de tu solicitud, y descríbela detalladamente.
+              realizar, selecciona entre las opciones a continuación.
             </p>
-            <div role="alert" class="alert">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                class="stroke-info shrink-0 w-6 h-6"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
-                ></path>
-              </svg>
-              <p>
-                Indica el tema y detalle de tu solicitud, y descríbela
-                detalladamente.
-              </p>
-            </div>
           </div>
           <div class="pa_co_form">
             <include src="PORTAL/1_pqrs/1_crear_1.html"></include>
